hopeful fix to overflow on mobile on some product pages.

--- a/src/Components/Products/ProductView/style.css
+++ b/src/Components/Products/ProductView/style.css
@@ -2,7 +2,7 @@
 
 .MuiContainer-root.product-view {
     height: fit-content;
-    display: flex;
+    display: block;
 }
 
 .product-view .image-wrapper img {
